People tab works, Featured posts connected to API, fixed add-post bugs
- People tab is now populated with all the people with any role in the respective body
- add-post component: defined addpost variable on declaration to avoid getting it undefined in template
- Featured posts section connected to API

--- a/src/app/page/discussions/add-post/add-post.component.html
+++ b/src/app/page/discussions/add-post/add-post.component.html
@@ -105,7 +105,7 @@
             <button
                 mat-icon-button
                 class="margin-sv"
-                id="link_btn">
+                id="attach_btn">
                 <input style="display:none;" type="file" accept="image/*" #file id="file"
                 (change)="uploadImage($event.target.files)">
                 <img class="header-image" [src]="getImageUrl()"
