--- a/src/app/page/discussions/group-feed/group-feed.component.html
+++ b/src/app/page/discussions/group-feed/group-feed.component.html
@@ -33,40 +33,38 @@
 </app-event-sidebar-desktop> -->
 
 <app-desktop-split *ngIf="posts" center_width_percentage="62.5">
-        <div center>
-            <div id="tab-container">
-                <ng-container *ngFor="let tab of tabs">
-                    <ng-container *ngIf="tab.show">
-                        <div class="tab clickable" (click)="onTabClicked(tab.id);" [ngClass]="{ 'selected-tab': selected_tab==tab.id }">
-                            {{ tab.name }}
-                        </div>
-                    </ng-container>
+    <div center>
+        <div id="tab-container">
+            <ng-container *ngFor="let tab of tabs">
+                <ng-container *ngIf="tab.show">
+                    <div class="tab clickable" (click)="onTabClicked(tab.id);"
+                        [ngClass]="{ 'selected-tab': selected_tab==tab.id }">
+                        {{ tab.name }}
+                    </div>
                 </ng-container>
-            </div>            
-            <div (scroll)="onScroll($event)" class="spaces">
+            </ng-container>
+        </div>
+        <div (scroll)="onScroll($event)" class="spaces">
 
-                <!-- <div class="rl-header sm main-title">
+            <!-- <div class="rl-header sm main-title">
                     {{ 'Spaces' }}
                 </div> -->
-                <div *ngFor="let post of posts">
-                    <app-communitypost-card [post]="post">
+            <div *ngFor="let post of posts">
+                <app-communitypost-card [post]="post" [is_moderator]="is_approval_moderator">
 
-                    </app-communitypost-card>
-                </div>
-
-
+                </app-communitypost-card>
             </div>
-            
-            <button mat-mini-fab
-            class="float_btn"
-            (click)=onCreate()>
-                <mat-icon>mode_edit</mat-icon>
-            </button>
+
+
         </div>
 
-        <div right>
-            <app-group-details *ngIf="group" [groupId]="group.id" noCenter="true" [desktopMode]="true">
-            </app-group-details>
-        </div>
-    </app-desktop-split>
+        <button mat-mini-fab class="float_btn" (click)=onCreate()>
+            <mat-icon>mode_edit</mat-icon>
+        </button>
+    </div>
 
+    <div right>
+        <app-group-details *ngIf="group" [groupId]="group.id" noCenter="true" [desktopMode]="true">
+        </app-group-details>
+    </div>
+</app-desktop-split>
