--- a/src/app/page/group-details/group-details.component.html
+++ b/src/app/page/group-details/group-details.component.html
@@ -56,22 +56,13 @@
       </table>
     </div>
     <div class="container join_button_cont">
-      <ng-container
-        *ngIf="group.is_user_following else join_state_btn">
-        <button 
-          class="join_button clickable" 
-          (click)=onJoinClicked()
-          style="background-color:red;"
-          >
-          Leave 
+      <ng-container *ngIf="group.is_user_following else join_state_btn">
+        <button class="join_button clickable" (click)=onJoinClicked() style="background-color:red;">
+          Leave
         </button>
       </ng-container>
       <ng-template #join_state_btn>
-        <button 
-          class="join_button clickable" 
-          (click)=onJoinClicked()
-          style="background-color: #435FFE;"
-          >
+        <button class="join_button clickable" (click)=onJoinClicked() style="background-color: #435FFE;">
           Join
         </button>
       </ng-template>
@@ -83,9 +74,10 @@
     font-style: normal;
     font-weight: 500;
     font-size: 16px;">Featured</h4>
-    <div class="scroll-container featured-post-container">
+    <div class="scroll-container featured-post-container ">
       <ng-container *ngFor="let featured of featured_posts">
-        <app-communitypost-card featured="true"></app-communitypost-card>
+        <app-communitypost-card [featured]="true" [post]="featured"></app-communitypost-card>
+
       </ng-container>
     </div>
   </div>
@@ -98,13 +90,11 @@
       <mat-tab label="People">
 
         <!-- hola -->
-        <ng-container *ngFor="let role of group_body.roles">
-          
+        <ng-container *ngFor="let role of group.roles">
+
           <div class="role-container">
             <div class="role-name">{{ role.name }}</div>
-            <app-user-card *ngFor="let user of role.users_detail"
-                          [profile]="user"
-                          role="">
+            <app-user-card *ngFor="let user of role.users_detail" [profile]="user" role="">
             </app-user-card>
           </div>
 
