--- a/src/app/page/discussions/group-feed/group-feed.component.css
+++ b/src/app/page/discussions/group-feed/group-feed.component.css
@@ -10,7 +10,7 @@
 
     background-color: rgba(245, 247, 250, 0.9);
 
-    z-index: 102;
+    z-index: 99;
 
     display: flex;
     align-items: center;
@@ -19,6 +19,11 @@
     padding: 6px;
 
     white-space: nowrap;
+}
+@media (max-width: 767px){
+    #tab-container{
+        top: 56px;
+    }
 }
 .tab{
     display: inline-flex;
